@@ -2,6 +2,8 @@
 <BODY>
 Integration with Restlet Cloud platform. Help document and manage your web API.
 
+This extension was previously named org.restlet.ext.apispark.
+
 @since Restlet 2.3
 @see <a href="https://cloud.restlet.com/">Restlet Cloud platform for Web APIs, by Restlet</a>
 </BODY>
